--- a/support/latex/common.tex
+++ b/support/latex/common.tex
@@ -40,7 +40,7 @@
 ]{hyperref}
 
 % Lulu only supports PDF format version 1.3
-\pdfminorversion=3
+%s\pdfminorversion=3
 
 \usepackage{multicol}
 \usepackage{multirow}
